--- a/eshop_product/templates/product/product_detail.html
+++ b/eshop_product/templates/product/product_detail.html
@@ -1,6 +1,7 @@
 {% extends 'shared/_MainLayout.html' %}
 {% load static %}
 {% load render_partial %}
+{% load product %}
 
 {% block content %}
     <section>
@@ -11,7 +12,7 @@
 					<div class="product-details"><!--product-details-->
 						<div class="col-sm-5">
 							<div class="view-product">
-								<img src="{{ product.image.url }}" alt="">
+								<img src="{% get_image_first product %}" alt="">
 								<h3>بزرگنمایـی</h3>
 							</div>
 							<div id="similar-product" class="carousel slide" data-ride="carousel">
