--- a/eshop_product/templates/product/product_list.html
+++ b/eshop_product/templates/product/product_list.html
@@ -9,7 +9,7 @@
 
 				<div class="col-sm-9 padding-right">
 					<div class="features_items"><!--features_items-->
-						<h2 class="title text-center">لیست محصولات</h2>
+						<h2 class="title text-center">لیست تخفیف ها</h2>
                         {% for product in page_obj %} {# object_list #}
                             {% include 'product/product_item_component.html' with product=product %}
                         {% endfor %}
@@ -45,7 +45,7 @@
 
 				<div class="col-sm-3">
 					<div class="left-sidebar">
-						<h2>دسته بندی محصولات</h2>
+						<h2>دسته بندی تخفیف ها</h2>
 						<div class="panel-group category-products" id="accordian"><!--category-productsr-->
                             {% render_partial 'eshop_product.views.products_category' %}
 						</div><!--/category-productsr-->
