--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 {% load product %}
 
 {% block content %}
-    <section id="slider"><!--slider-->
+    {% comment %}<section id="slider"><!--slider-->
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
@@ -44,7 +44,8 @@
                 </div>
             </div>
         </div>
-    </section><!--/slider-->
+    </section><!--/slider-->{% endcomment %}
+
     <section>
         <div class="container">
             <div class="row">
