--- a/templates/home.html
+++ b/templates/home.html
@@ -51,7 +51,7 @@
             <div class="row">
 
                 <div class="recommended_items"><!--NewProduct_items-->
-                    <h2 class="title text-center">پربازدید ترین محصولات</h2>
+                    <h2 class="title text-center">پر بازدیدترین تخفیف ها</h2>
 
                     <div id="recommended-item-carousel" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
@@ -88,7 +88,45 @@
                         </a>
                     </div>
                 </div><!--/NewProduct_items-->
-                {% include 'shared/category.html' with name_category="آخرین محصولات" grouped_products=latest_products %}
+                <div class="recommended_items"><!--NewProduct_items-->
+                    <h2 class="title text-center">آخرین تخفیف ها</h2>
+
+                    <div id="recommended-item-carousel" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner">
+                            {% for group in latest_products %}
+                                <div class="item {{ forloop.first|yesno:'active,' }}">
+                                    {% for product in group %}
+                                        <div class="col-sm-3">
+                                            <div class="product-image-wrapper">
+                                                <div class="single-products">
+                                                    <div class="productinfo text-center">
+
+
+                                                            <img src="{% get_image_first product %}" alt="">
+
+
+                                                        <h2>{{ product.price }}تومان</h2>
+                                                        <p>{{ product.title }}</p>
+                                                        <a href="#" class="btn btn-default add-to-cart"><i
+                                                                class="fa fa-shopping-cart"></i>افزودن به سبـد خرید</a>
+                                                    </div>
+
+                                                </div>
+                                            </div>
+                                        </div>
+                                    {% endfor %}
+                                </div>
+                            {% endfor %}
+                        </div>
+                        <a class="left recommended-item-control" href="#recommended-item-carousel" data-slide="prev">
+                            <i class="fa fa-angle-left"></i>
+                        </a>
+                        <a class="right recommended-item-control" href="#recommended-item-carousel" data-slide="next">
+                            <i class="fa fa-angle-right"></i>
+                        </a>
+                    </div>
+                </div><!--/NewProduct_items-->
+
 
                 {% for category in categories %}
                     {% include 'shared/category.html' with category=category %}
